Revert "Revert v1.5.0"
This reverts commit 996b882025f4c80e29bb72701f577033e864a995.
